# koder

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: agents-and-teams.md  commands.md  configuration.md  extensions.md  features.md  getting-started.md  hooks.md  interactive-tui.md  permissions-and-privacy.md  sandbox.md  sessions-and-memory.md  voice-mode.md  workflows.md
koder_agent/: __init__.py  cli.py  litellm_cost_map.py
koder_agent/agentic/: __init__.py  agent.py  api_errors.py  approval_hooks.py  hook_guardrail.py  hooks.py  plan_guardrail.py  skill_guardrail.py
koder_agent/auth/: client_integration.py  codex_prompts.py  constants.py  secure_storage.py  token_storage.py  tool_utils.py
koder_agent/config/: __init__.py  manager.py  models.py
koder_agent/core/: __init__.py  at_completer.py  at_mentions.py  auto_suggest.py  bash_security.py  constants.py  display_context.py  file_index.py  goal_display.py  goal_prompts.py  goal_runtime.py  goals.py  interactive.py  keybindings.py  keyboard_listener.py  notifications.py  queued_input.py  scheduler.py  security.py  session.py  shell_completer.py  skill_usage.py  status_line.py  streaming_display.py  terminal_reflow.py  turn_cancellation.py  usage_tracker.py  vim_mode.py  working_indicator.py
koder_agent/data/: __init__.py  model_prices_and_context_window.json
koder_agent/harness/: __init__.py  add_dir_validation.py  bootstrap.py  buddy.py  checkpoint.py  code_intelligence.py  diagnostics.py  github_actions.py  ide.py  magic_docs.py  managed_settings.py  onboarding.py  output_styles.py  paths.py  policy_limits.py  pr_status.py  prompt_suggestion.py  reasoning_display.py  release_notes.py  review_flow.py  runtime.py  sandbox_settings.py  session_env.py  session_flow.py  statusline_settings.py  statusline_setup.py  tips.py  upgrade.py  version_info.py
koder_agent/mcp/: __init__.py  elicitation.py  lifecycle.py  limits.py  notifications.py  oauth.py  project_approvals.py  prompts.py  reconnection.py  runtime_authorization.py  serve.py  server_config.py  server_factory.py  (+1 more)
scripts/: fake_openai_chat_server.py  generate_codex_prompts.py  sandbox_backend_smoke.py  seed_tmux_stats_fixture.py  seed_tmux_usage_fixture.py  tmux_feature_scenarios.py  update_litellm_model_cost_map.py  upgrade_dependency.py
tests/: conftest.py  test_capture_usage.py  test_checkpoint.py  test_cli_fatal_error.py  test_cli_image_flag.py  test_file_tools.py  test_interactive.py  test_interactive_prompt.py  test_interactive_voice.py  test_litellm_cost_map.py  test_llm_completion_responses.py  test_model_info.py  test_model_resolution.py  test_release_notes.py  test_shell_background.py  test_skill_inline_command.py  test_skill_loader.py  test_skill_loader_polish.py  test_skill_policy_sdk.py  test_skill_render_args.py  test_skill_restrictions.py  test_skill_restrictions_task_boundary.py  test_skill_token_efficiency.py  test_status_line.py  test_streaming_display.py  test_usage_tracker.py  test_web.py
(+584 files in other folders)
