[project]
name = "koder"
version = "0.5.3"
description = "An intuitive AI coding assistant and interactive CLI tool that boosts developer productivity with intelligent automation and context-aware support."
authors = [{ name = "Pengfei Ni" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "vibe coding",
    "copilot",
    "openai",
    "agent",
    "ai",
    "agentic",
    "litellm",
]
dependencies = [
    "openai-agents[litellm]>=0.17.3",
    "litellm>=1.85.1",
    "tiktoken>=0.13.0",
    "boto3>=1.43.14",
    "requests>=2.34.2",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.14.4",
    "aiosqlite>=0.22.1",
    "pydantic>=2.13.4",
    "httpx[socks]>=0.28.1",
    "openai==2.38.0",
    "rich>=15.0.0",
    "google-cloud-aiplatform>=1.153.1",
    "prompt-toolkit>=3.0.52",
    "backoff>=2.2.1",
    "fastapi>=0.136.3",
    "orjson>=3.11.9",
    "apscheduler>=3.11.2",
    "fastapi-sso>=0.21.0",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.29",
    "cryptography>=48.0.0",
    "pynacl>=1.6.2",
    "websockets>=16.0",
    "pyyaml>=6.0.3",
    "jsonschema>=4.26.0",
    "sounddevice>=0.5.5",
    "whatthepatch>=1.0.7",
    "anthropic>=0.104.1",
    "docker>=7.1.0",
    "modal>=1.4.3",
    "vercel>=0.5.9",
    "e2b>=2.23.1",
    "e2b-code-interpreter>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/feiskyer/koder"
Repository = "https://github.com/feiskyer/koder"


[project.scripts]
koder = "koder_agent.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "only-managed"
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "black>=26.5.1",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "N806", "N818"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [".venv", "build", "dist"]

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore asyncio subprocess transport cleanup warnings - harmless race condition
    # when event loop closes before GC runs on subprocess transports
    "ignore:Exception ignored in.*BaseSubprocessTransport.__del__:pytest.PytestUnraisableExceptionWarning",
    # litellm's deepeval integration uses class-based Pydantic config (third-party, can't fix)
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning:pydantic",
]

[tool.hatch.build.targets.wheel]
packages = ["koder_agent"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".koder/",
    ".github/",
    ".uv-cache/",
    "scripts/",
    "tests/",
    "docs/",
    "AGENTS.md",
    "CLAUDE.md",
    "GEMINI.md",
    "CONTRIBUTING.md",
    "uv.lock",
]
